<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ime_name">全能工具箱</string>
    <string name="ime_settings_activity_name">全能工具箱设置</string>
    <!-- version = apk(java) + ime engine + sys dict + [hotlist (TBD)] -->
    <string name="version">1.0.0</string>

    <!-- Used by the toggle keys in soft keyboards.-->
    <string name="toggle_cn">0</string>
    <string name="toggle_cn_cand">1</string>
    <string name="toggle_en_lower">2</string>
    <string name="toggle_en_upper">3</string>
    <string name="toggle_en_sym1">4</string>
    <string name="toggle_en_sym2">5</string>
    <string name="toggle_smiley">6</string>
    <string name="toggle_enter_go">7</string>
    <string name="toggle_enter_search">8</string>
    <string name="toggle_enter_send">9</string>
    <string name="toggle_enter_next">10</string>
    <string name="toggle_enter_done">11</string>
    <string name="toggle_row_cn">12</string>
    <string name="toggle_row_en">13</string>
    <string name="toggle_row_uri">14</string>
    <string name="toggle_row_emailaddress">15</string>
    <string name="toggle_phone_sym">3</string>

    <!-- settings related -->
    <string name="setting_sound_key">setting_sound_key</string>
    <string name="setting_vibrate_key">setting_vibrate_key</string>
    <string name="setting_prediction_key">setting_prediction_key</string>
    <string name="setting_switch_key">setting_switch_key</string>
    <string name="setting_advanced_key">setting_advanced_key</string>
    <string name="setting_keyboard_use">setting_keyboard_use</string>

    <string name="setting">全能工具箱设置</string>
    <string name="setting_sound_key_title">按键声音</string>
    <string name="setting_vibrate_title">按键震动</string>
    <string name="setting_prediction_title">联想输入</string>
    <string name="setting_switch_title">中英文切换</string>
    <string name="setting_switch_shift_space_title">Shift-space</string>
    <string name="setting_use_keyboard_title">键盘选择</string>

    <string name="setting_enabled">开启</string>
    <string name="setting_disabled">关闭</string>

    <string name="setting_others">其它设置</string>
    <string name="setting_others_summary">词典同步等</string>
    <string name="input_setting_error">无法打开系统输入法设置页面</string>

    <string name="app_name">微信红包</string>
    <string name="app_version">v5.0</string>
    <string name="app_description">∠( ᐛ 」∠)_使用指南∠( ᐛ 」∠)_\n\n ○ 狠戳插件开关\n ○ 回到微信聊天\n ○ 坐等红包进账\n\n 遇到问题, 欢迎通过 GitHub Issue 反馈~\n https://github.com/geeeeeeeeek/WeChatLuckyMoney</string>
    <string name="preference">偏好设置</string>
    <string name="update_error">遇到一些问题,请前往GitHub手动更新喵(ฅ´ω`ฅ)</string>
    <string name="update_new_seg1">发现新版本(</string>
    <string name="update_new_seg2">),正在为您准备下载( /) V (\\ )</string>
    <string name="update_new_seg3">),请进入设置完成更新(ฅ´ω`ฅ)</string>
    <string name="update_already_latest">已经是最新版本了(❁´▽`❁)</string>
    <string name="service_off">关闭插件</string>
    <string name="service_on">开启插件</string>
    <string name="pref_watch_exclude_words_summary">不拆开包含这些文字的红包(空格间隔)</string>
    <string name="pref_comment_words_summary">随机选择下列感谢语(空格间隔)</string>
    <string name="url_github_issues">https://github.com/geeeeeeeeek/WeChatLuckyMoney/issues</string>
    <string name="home_banner_ad_unit_id">ca-app-pub-8428619221469478/4736153346</string>
    <string name="webview_banner_ad_unit_id">ca-app-pub-8428619221469478/4163694548</string>
    <string name="community">社区</string>
    <string name="settings">设置</string>
    <string name="alipay_ad_text">立即获得红包！人人可领！天天可领！</string>
    <string name="github_1">在 GitHub 上</string>
    <string name="github_2">本项目，支持应用开源</string>
    <string name="star_2">Star</string>
    <string name="star_1">★</string>
    <string name="turn_on_toast">点击「微信红包」</string>
    <string name="turn_on_error_toast">遇到一些问题,请手动打开系统设置>无障碍服务>微信红包(ฅ´ω`ฅ)</string>
    <string name="webview_github_title">GitHub 项目主页</string>
    <string name="webview_alipay_title">支付宝红包</string>
    <string name="download_backend">正在后台下载</string>
    <string name="download_redirect">正在前往下载页面</string>
    <string name="download_hint">点击\"普通下载\"获取 Uber</string>
    <string name="watch_options">监视选项</string>
    <string name="watch_notifications">监视系统通知</string>
    <string name="watch_notifications_hint">读取新消息通知中的红包提示并进入聊天页</string>
    <string name="watch_list">监视聊天列表</string>
    <string name="watch_list_hint">读取聊天列表中的红包提示并进入聊天页</string>
    <string name="anti_block_options">防封号选项</string>
    <string name="auto_open_packets">自动拆开红包</string>
    <string name="open_with_delay">延时拆开红包</string>
    <string name="open_self">拆开自己发的红包</string>
    <string name="skip_phrases">屏蔽红包文字</string>
    <string name="about">关于应用</string>
    <string name="check_new_version">检查新版本</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="help_hint">前往GitHub项目主页提交issue</string>
    <string name="labs">实验功能</string>
    <string name="snatch_on_lockscreen">息屏抢红包</string>
    <string name="snatch_on_lockscreen_hint">保持30分钟后台活跃,可能会极大增加电量消耗,请谨慎使用</string>
    <string name="auto_reply">拆开红包后自动回复</string>
    <string name="checking_new_version">正在检查新版本……</string>
    <string name="delay_instantly">立即</string>
    <string name="delay_delay">延迟</string>
    <string name="delay_open">拆开红包</string>
    <string name="delay_sec">秒</string>
    <string name="delay_then">然后</string>
    <string name="d">延迟0秒拆开红包</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">抢红包</string>
    <string name="second_fragment_label">键盘</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="keyboard_preference">键盘设置</string>

</resources>
