<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/soundKeyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_sound_key_title" />

        <TextView
            android:id="@+id/soundKeyHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/soundKeyTitle"
            android:text="@string/setting_disabled" />

        <CheckBox
            android:id="@+id/soundKeyCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/vibrateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_vibrate_title" />

        <TextView
            android:id="@+id/vibrateHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vibrateTitle"
            android:text="@string/setting_disabled" />

        <CheckBox
            android:id="@+id/vibrateCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/predictionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_prediction_title" />

        <TextView
            android:id="@+id/predictionHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/predictionTitle"
            android:text="@string/setting_disabled" />

        <CheckBox
            android:id="@+id/predictionCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/othersSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/othersTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_others" />

        <TextView
            android:id="@+id/othersHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/othersTitle"
            android:text="@string/setting_others_summary" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/switchLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/switchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_switch_title" />

        <TextView
            android:id="@+id/switchHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switchTitle"
            android:text="@string/setting_switch_shift_space_title" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/useKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/use_keyboardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_use_keyboard_title" />

        <TextView
            android:id="@+id/use_keyboardHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/use_keyboardTitle"
            android:text="@string/setting_use_keyboard_title" />

    </RelativeLayout>

</LinearLayout>
